--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,42 @@ website:
         menu:
           - text: "Hands-on Exercise 1"
             href: "hands_on_ex/hands_on_ex01/hands_on_ex01.html"
+          - text: "Hands-on Exercise 2"
+            href: "hands_on_ex/hands_on_ex01/hands_on_ex02.html"
+          - text: "Hands-on Exercise 3"
+            href: "hands_on_ex/hands_on_ex01/hands_on_ex03.html"
+          - text: "Hands-on Exercise 4"
+            href: "hands_on_ex/hands_on_ex01/hands_on_ex04.html"
+          - text: "Hands-on Exercise 5"
+            href: "hands_on_ex/hands_on_ex01/hands_on_ex05.html"
+          - text: "Hands-on Exercise 6"
+            href: "hands_on_ex/hands_on_ex01/hands_on_ex06.html"
+          - text: "Hands-on Exercise 7"
+            href: "hands_on_ex/hands_on_ex01/hands_on_ex07.html"
+          - text: "Hands-on Exercise 8"
+            href: "hands_on_ex/hands_on_ex01/hands_on_ex08.html"
+          - text: "Hands-on Exercise 9"
+            href: "hands_on_ex/hands_on_ex01/hands_on_ex09.html"
+            
+      - text: "In-Class Exercise"
+        menu:
+          - text:"In-Class Exercise 1"
+          - text:"In-Class Exercise 2"
+          - text:"In-Class Exercise 3"
+          - text:"In-Class Exercise 4"
+          - text:"In-Class Exercise 5"
+          - text:"In-Class Exercise 6"
+          - text:"In-Class Exercise 7"
+          - text:"In-Class Exercise 8"
+          - text:"In-Class Exercise 9"
+        
+      - text: "Take-Home Exercise"
+        menu:
+          - text:"Take-Home Exercise 1"
+          - text:"Take-Home Exercise 2"
+          - text:"Take-Home Exercise 3"
+          - text:"Take-Home Exercise 4"
+
     right:
       - href: index.qmd
         text: Home
