--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,40 +10,53 @@ website:
           - text: "Hands-on Exercise 1"
             href: "hands_on_ex/hands_on_ex01/hands_on_ex01.html"
           - text: "Hands-on Exercise 2"
-            href: "hands_on_ex/hands_on_ex01/hands_on_ex02.html"
+            href: "hands_on_ex/hands_on_ex02/hands_on_ex02.html"
           - text: "Hands-on Exercise 3"
-            href: "hands_on_ex/hands_on_ex01/hands_on_ex03.html"
+            href: "hands_on_ex/hands_on_ex03/hands_on_ex03.html"
           - text: "Hands-on Exercise 4"
-            href: "hands_on_ex/hands_on_ex01/hands_on_ex04.html"
+            href: "hands_on_ex/hands_on_ex04/hands_on_ex04.html"
           - text: "Hands-on Exercise 5"
-            href: "hands_on_ex/hands_on_ex01/hands_on_ex05.html"
+            href: "hands_on_ex/hands_on_ex04/hands_on_ex05.html"
           - text: "Hands-on Exercise 6"
-            href: "hands_on_ex/hands_on_ex01/hands_on_ex06.html"
+            href: "hands_on_ex/hands_on_ex06/hands_on_ex06.html"
           - text: "Hands-on Exercise 7"
-            href: "hands_on_ex/hands_on_ex01/hands_on_ex07.html"
+            href: "hands_on_ex/hands_on_ex07/hands_on_ex07.html"
           - text: "Hands-on Exercise 8"
-            href: "hands_on_ex/hands_on_ex01/hands_on_ex08.html"
+            href: "hands_on_ex/hands_on_ex08/hands_on_ex08.html"
           - text: "Hands-on Exercise 9"
-            href: "hands_on_ex/hands_on_ex01/hands_on_ex09.html"
+            href: "hands_on_ex/hands_on_ex08/hands_on_ex09.html"
             
       - text: "In-Class Exercise"
         menu:
-          - text:"In-Class Exercise 1"
-          - text:"In-Class Exercise 2"
-          - text:"In-Class Exercise 3"
-          - text:"In-Class Exercise 4"
-          - text:"In-Class Exercise 5"
-          - text:"In-Class Exercise 6"
-          - text:"In-Class Exercise 7"
-          - text:"In-Class Exercise 8"
-          - text:"In-Class Exercise 9"
+          - text: In-Class Exercise 1
+            href: in_class_ex/in_class_ex01/in_class_ex01.html
+          - text: In-Class Exercise 2
+            href: in_class_ex/in_class_ex02/in_class_ex02.html
+          - text: In-Class Exercise 3
+            href: in_class_ex/in_class_ex03/in_class_ex03.html
+          - text: In-Class Exercise 4
+            href: in_class_ex/in_class_ex04/in_class_ex04.html
+          - text: In-Class Exercise 5
+            href: in_class_ex/in_class_ex05/in_class_ex05.html
+          - text: In-Class Exercise 6
+            href: in_class_ex/in_class_ex06/in_class_ex06.html
+          - text: In-Class Exercise 7
+            href: in_class_ex/in_class_ex07/in_class_ex07.html
+          - text: In-Class Exercise 8
+            href: in_class_ex/in_class_ex08/in_class_ex08.html
+          - text: In-Class Exercise 9
+            href: in_class_ex/in_class_ex09/in_class_ex09.html
         
       - text: "Take-Home Exercise"
         menu:
-          - text:"Take-Home Exercise 1"
-          - text:"Take-Home Exercise 2"
-          - text:"Take-Home Exercise 3"
-          - text:"Take-Home Exercise 4"
+          - text: Take-Home Exercise 1
+            href: take_home_ex/take_home_ex01/take_home_ex01.html
+          - text: Take-Home Exercise 2
+            href: take_home_ex/take_home_ex02/take_home_ex02.html
+          - text: Take-Home Exercise 3
+            href: take_home_ex/take_home_ex03/take_home_ex03.html
+          - text: Take-Home Exercise 4
+            href: take_home_ex/take_home_ex04/take_home_ex04.html
 
     right:
       - href: index.qmd
