hands_on_3 committ

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,8 +11,10 @@ website:
             href: "hands_on_ex/hands_on_ex01/hands_on_ex01.html"
           - text: "Hands-on Exercise 2"
             href: "hands_on_ex/hands_on_ex02/hands_on_ex02.html"
-          - text: "Hands-on Exercise 3"
-            href: "hands_on_ex/hands_on_ex03/hands_on_ex03.html"
+          - text: "Hands-on Exercise 3.1"
+            href: "hands_on_ex/hands_on_ex03/hands_on_ex03.1.html"
+          - text: "Hands-on Exercise 3.2"
+            href: "hands_on_ex/hands_on_ex03/hands_on_ex03.2.html"
           - text: "Hands-on Exercise 4"
             href: "hands_on_ex/hands_on_ex04/hands_on_ex04.html"
           - text: "Hands-on Exercise 5"
